[package]
name = "lerna"
version = "0.2.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
description = "an intelligent theorem prover"
edition = "2018"

[dependencies]
chashmap = "2.2"
crossbeam = "0.7"
clap = "2.32"
fern = "0.5"
lazy_static = "1.2"
log = "0.4"
memmap = "0.7"
parking_lot = "0.7"
tptp = "0.8"
smallvec = "0.6"
unique = "0.6"
