[package]
name = "lerna"
version = "0.2.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
description = "an intelligent theorem prover"
edition = "2018"

[dependencies]
clap = "2.32"
crossbeam = "0.7"
fern = "0.5"
lazy_static = "1.3"
log = "0.4"
memmap = "0.7"
smallvec = "0.6"
tptp = "0.9"
unique = "0.6"
